# better_internet_connectivity_checker

./: .editorconfig  .gitignore  .pubignore  APPENDIX.md  CHANGELOG.md  CODESTYLE.md  LICENSE  README.md  context7.json  pubspec.yaml
.ai/: AGENTS.md  CLAUDE.md
.github/: dependabot.yml
.github/actions/setup-dart/: action.yml
.github/actions/setup-python-uv/: action.yml
.github/workflows/: benchmark.yml  changelog.yml  example.yml  package.yml  pr-checks.yml  pr-conventions.yml  publish.yml  repo.yml
benchmark/: .gitignore  README.md
benchmark/harness/: fake_probe.dart  local_http_server.dart  memory_sampler.dart  result_writer.dart  scenario_args.dart  slow_observer.dart  tick_drift_meter.dart
benchmark/micro/: check_once_overhead.dart  observer_dispatch.dart  status_emission.dart
benchmark/python/: .gitignore  AGENTS.md  pyproject.toml  requirements.txt  run.py
benchmark/python/.ai/: AGENTS.md
benchmark/python/bicc_bench/: __init__.py  config.py
benchmark/python/bicc_bench/data/: __init__.py
benchmark/python/bicc_bench/data/dtos/: __init__.py  compare_row.py  result_record.py
benchmark/python/bicc_bench/data/utils/: __init__.py  charts.py  io.py  markdown.py  meta.py  stats.py
benchmark/python/bicc_bench/subcommands/: __init__.py  build.py  compare.py  report.py  runner.py
benchmark/python/tests/: conftest.py  test_build.py  test_io.py  test_markdown.py  test_meta.py  test_records.py  test_stats.py
benchmark/reports/: SUMMARY.md
benchmark/scenarios/: flapping_network.dart  long_running.dart  many_subscribers.dart  quiet_app.dart  slow_observer.dart  trigger_storm.dart
example/: .gitignore  CODESTYLE.md  README.md  analysis_options.yaml  pubspec.yaml
example/.ai/: AGENTS.md
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/lahaluhem/better_internet_conn_check_example/: MainActivity.kt
example/android/app/src/main/kotlin/com/lahaluhem/ult_internet_conn_check_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/lib/features/core/data/: const_formatters.dart
example/lib/features/core/data/constants/: const_durations.dart  const_theme.dart  const_values.dart  core_constants.dart
example/lib/features/core/views/: home_view.dart  home_view_model.dart
example/lib/features/core/widgets/: async_icon_action_button.dart  core_widgets.dart  demo_intro.dart  status_badge.dart  status_summary.dart
example/lib/features/core/widgets/platform/: platform_card.dart  platform_chip.dart  platform_divider.dart
example/lib/features/custom_targets/: custom_targets_view.dart  custom_targets_view_model.dart  method_aware_probe.dart
example/lib/features/custom_targets/data/enums/: probe_method.dart
example/lib/features/failure_inspection/: failure_inspection_view.dart  failure_inspection_view_model.dart
example/lib/features/live_stream/: live_stream_view.dart  live_stream_view_model.dart
example/lib/features/live_stream/data/constants/: const_probe_targets.dart
example/lib/features/one_shot/: one_shot_view.dart  one_shot_view_model.dart
example/lib/features/policy_comparison/: policy_comparison_view.dart  policy_comparison_view_model.dart
example/lib/home/: home_view.dart
example/test/: widget_test.dart
lib/: better_internet_connectivity_checker.dart  ultimate_internet_connectivity_checker.dart
lib/src/: internet_connection.dart
lib/src/data/: typedefs.dart  values.dart
lib/src/data/models/: const_uri.dart
lib/src/internal/: event_sink.dart  external_trigger_link.dart  periodic_scheduler.dart
lib/src/observer/: connectivity_observer.dart  printing_connectivity_observer.dart
lib/src/observer/events/: connectivity_event.dart
lib/src/observer/events/instances/: check_completed_event.dart  check_interval_changed_event.dart  disposed_event.dart  external_trigger_error_event.dart  external_trigger_fired_event.dart  slow_threshold_changed_event.dart  status_emitted_event.dart
lib/src/observer/sinks/: printing_connectivity_observer.dart  silent_connectivity_observer.dart
lib/src/policy/: reachability_policy.dart
lib/src/policy/strategies/: all_reachable_policy.dart  any_reachable_policy.dart
lib/src/probe/: connectivity_probe.dart
lib/src/probe/models/: probe_result.dart  probe_target.dart
lib/src/probe/transports/: http_head_probe.dart  http_probe.dart
lib/src/status/: internet_status.dart
lib/src/status/models/: connection_quality.dart
lib/src/status/outcomes/: reachable.dart  unreachable.dart
scripts/: README.md  release.sh
test/: connectivity_observer_test.dart  internet_connection_events_test.dart  internet_connection_test.dart
test/_helpers/: recording_observer.dart  stub_probe.dart
test/data/: const_uri_test.dart  values_test.dart
test/policy/: all_reachable_policy_test.dart  any_reachable_policy_test.dart
test/probe/: http_head_probe_test.dart  http_probe_test.dart  probe_result_test.dart  probe_target_test.dart
test/status/: internet_status_test.dart
